# PolyTheremin_Software

./: .gitignore  .gitmodules  CMakeLists.txt  main.c  readme.md
boards/: polyTheremin_board.h
doc/: freq_det_wave.json
freertos/: FreeRTOSConfig.h
freertos/FreeRTOS-Config/: FreeRTOSConfig.h
lib/: CMakeLists.txt
lib/aquisition/: CMakeLists.txt  aquisition.c  aquisition.h
lib/button/: CMakeLists.txt  button.c  button.h
lib/cmsis/: CMakeLists.txt  cmsis.c  cmsis.h
lib/comlib/: CMakeLists.txt  comlib.h  config.h  fixfloat.h
lib/core/: CMakeLists.txt  core.c  core.h
lib/dds/: CMakeLists.txt  audio.h  dac.c  dac.h  dds.c  dds.h
lib/freq_meas/: CMakeLists.txt  freq_meas.c  freq_meas.h
lib/het_generator/: CMakeLists.txt  het_generator.c  het_generator.h  het_generator.pio
lib/led_anim/: CMakeLists.txt  led_anim.c  led_anim.h
lib/logger/: logger.c  logger.h
lib/ws2812/: CMakeLists.txt  ws2812.c  ws2812.h
src/: CMakeLists.txt  main.c
